--- a/ForPuttProject/package.json
+++ b/ForPuttProject/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@prisma/client": "5.15.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
@@ -26,6 +27,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "pg": "^8.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.1",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/parser": "^5.0.1",
@@ -47,7 +50,8 @@
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.1.2",
     "react-test-renderer": "18.2.0",
-    "typescript": "^4.4.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   },
   "private": true,
   "type": "module"
