--- a/ForPuttProject/app.json
+++ b/ForPuttProject/app.json
@@ -4,7 +4,7 @@
     "slug": "ForPuttProject",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/ForPutt Icon.png",
+    "icon": "./assets/images/ios/ForPuttIcon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/ForPuttAdaptiveIcon.png",
+        "foregroundImage": "./assets/images/android/drawable-hdpi/ForPuttIcon.png",
         "backgroundColor": "#9CD374"
       },
       "package": "com.trevand1.ForPuttProject"
@@ -25,7 +25,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/ForPuttFavicon.png"
+      "favicon": "./assets/images/ios/ForPuttIcon.png"
     },
     "plugins": ["expo-router"],
     "experiments": {
