--- a/ForPuttProject/package.json
+++ b/ForPuttProject/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.15",
     "expo-font": "~12.0.6",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
@@ -31,7 +32,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
